--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:wght@400;500&display=swap"
         rel="stylesheet">
-    <title>StorWallet</title>
+    <title>Rolls Wallet</title>
     <script defer="defer" src="/webextension-polyfill.js"></script>
     <script defer="defer" src="/ui.js"></script>
 </head>
